# VeilHook

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
cmake/: snitch.cmake
include/: VeilHook.hpp
include/VeilHook/: allocator.hpp  common.hpp  error.hpp  inline_hook.hpp  utility.hpp  version.hpp
src/: allocator.cpp  inline_hook.cpp  windows.cpp
tests/: CMakeLists.txt  test_allocator.cpp  test_inline_hook.cpp  test_utility.cpp
